--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ a {
   width: 100%;
 }
 
-.image-container {
-  height: 11em;
-  overflow: hidden;
-}
+/*.image-container {*/
+/*  height: 11em;*/
+/*  overflow: hidden;*/
+/*}*/
